<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/back_tab">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week"
            android:textSize="14sp"
            android:padding="8dp"
            android:gravity="center"
            android:id="@+id/txt_top_tab1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month"
            android:textSize="14sp"
            android:padding="8dp"
            android:gravity="center"
            android:id="@+id/txt_top_tab2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="14sp"
            android:padding="8dp"
            android:gravity="center"
            android:id="@+id/txt_top_tab3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@drawable/back_red_border"
        android:padding="2dp">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/list_view"
            android:scrollbars="none"

            android:divider="@color/transparent"
            android:dividerHeight="0dp"
            >

        </ListView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/redTextColor"
            android:textSize="16sp"
            android:id="@+id/txt_empty"
            android:text="@string/no_data"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>
