<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/back_tab">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week"
            android:textSize="14sp"
            android:padding="8dp"
            android:gravity="center"
            android:id="@+id/txt_top_tab1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month"
            android:textSize="14sp"
            android:padding="8dp"
            android:gravity="center"
            android:id="@+id/txt_top_tab2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="14sp"
            android:padding="8dp"
            android:gravity="center"
            android:id="@+id/txt_top_tab3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_red_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/redTextColor"
                    android:text="@string/visits"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grayTextColor"
                    android:textSize="16sp"
                    android:textColorHint="@color/grayTextColor"
                    android:hint="@string/na"
                    android:gravity="center"
                    android:id="@+id/txt_visits"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_blue_border"
                android:layout_marginLeft="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blueTextColor"
                    android:text="@string/average_visit_duration"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grayTextColor"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColorHint="@color/grayTextColor"
                    android:hint="@string/na"
                    android:id="@+id/txt_average_visit_duration"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_blue_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blueTextColor"
                    android:text="@string/current_visit_duration"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grayTextColor"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColorHint="@color/grayTextColor"
                    android:hint="@string/na"
                    android:id="@+id/txt_current_visit_duration"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_red_border"
                android:layout_marginLeft="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/redTextColor"
                    android:text="@string/last_visit_date"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grayTextColor"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColorHint="@color/grayTextColor"
                    android:hint="@string/na"
                    android:id="@+id/txt_last_visit_date"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
