<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/bowtie_logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:id="@+id/txt_happy"
                android:background="@drawable/back_blue_back_round"
                android:text="@string/happy"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColor="@color/unSelectColor"
                android:id="@+id/txt_sad"
                android:background="@drawable/back_red_back_round"
                android:text="@string/sad"
                android:gravity="center"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="3dp"
            android:textColor="@color/grayTextColor"
            android:text="@string/character_140"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:maxLength="140"
            android:id="@+id/edit_text"
            android:background="@drawable/back_gray_back_round"
            android:padding="10dp"
            android:gravity="top"
            android:layout_marginTop="3dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/redTextColor"
                android:textSize="16sp"
                android:id="@+id/txt_cancel"
                android:text="@string/cancel"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:id="@+id/txt_submit"
                android:text="@string/submit"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
