<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/bowtie_logo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/grayColor"
        android:textSize="14sp"
        android:padding="7dp"
        android:background="@drawable/back_gray_border"
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/grayColor"
        android:textSize="14sp"
        android:padding="7dp"
        android:background="@drawable/back_gray_border"
        android:id="@+id/edit_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="15dp"
        android:textAllCaps="false"
        android:id="@+id/btn_login"
        android:background="@color/colorPrimaryDark"/>
</LinearLayout>
